--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -196,7 +196,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\%40StrokeStyleT\リポジトリ %28CsWin10Desktop3%29\SSTFormat\SSTFormat.csproj">
+    <ProjectReference Include="..\..\..\%40StrokeStyleT\SSTFormat\SSTFormat\SSTFormat.csproj">
       <Project>{93b53767-a0a5-431c-9ec7-b23dbffb10ec}</Project>
       <Name>SSTFormat</Name>
     </ProjectReference>
