ソリューションにSSTFormatリポジトリのプロジェクトを追加。

--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -196,13 +196,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\%40StrokeStyleT\SSTFormat\SSTFormat\SSTFormat.csproj">
-      <Project>{93b53767-a0a5-431c-9ec7-b23dbffb10ec}</Project>
-      <Name>SSTFormat</Name>
-    </ProjectReference>
     <ProjectReference Include="..\FDKリポジトリ\FDK\FDK.csproj">
       <Project>{0e35c4ac-6e28-4a09-a6ce-05d177800051}</Project>
       <Name>FDK</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SSTFormatリポジトリ\SSTFormat\SSTFormat.csproj">
+      <Project>{93b53767-a0a5-431c-9ec7-b23dbffb10ec}</Project>
+      <Name>SSTFormat</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
