選曲画面に曲別SKILLを表示。
ただしまだ最後の演奏結果しか反映されない。

--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -146,6 +146,7 @@
     <Compile Include="ステージ\選曲\BPMパネル.cs" />
     <Compile Include="ステージ\選曲\曲ステータスパネル.cs" />
     <Compile Include="ステージ\選曲\曲リスト.cs" />
+    <Compile Include="ステージ\選曲\曲別SKILL.cs" />
     <Compile Include="ステージ\選曲\選択曲枠ランナー.cs" />
     <Compile Include="ステージ\選曲\難易度と成績.cs" />
     <Compile Include="ステージ\選曲\青い枠.cs" />
@@ -505,6 +506,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="System\Images\選曲画面_BPMパネル.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="System\Images\曲別SKILLアイコン2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
