SSTFormat.チップ が持っていた演奏情報を、DTXmatixx 側で管理するよう修正。
すべてのチップと１対１に対応するチップの演奏情報クラスを新設し、演奏ステージがDictionaryで管理。

--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -121,6 +121,7 @@
     <Compile Include="ステージ\演奏\カウントマップライン.cs" />
     <Compile Include="ステージ\演奏\コンボ表示.cs" />
     <Compile Include="ステージ\演奏\スコア表示.cs" />
+    <Compile Include="ステージ\演奏\チップの演奏状態.cs" />
     <Compile Include="ステージ\演奏\チップ光.cs" />
     <Compile Include="ステージ\演奏\ドラムパッド.cs" />
     <Compile Include="ステージ\演奏\プレイヤー名表示.cs" />
