--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -150,7 +150,7 @@
     <Compile Include="ステージ\選曲\曲別SKILL.cs" />
     <Compile Include="ステージ\選曲\選択曲枠ランナー.cs" />
     <Compile Include="ステージ\選曲\難易度と成績.cs" />
-    <Compile Include="ステージ\選曲\青い枠.cs" />
+    <Compile Include="ステージ\選曲\青い線.cs" />
     <Compile Include="ステージ\選曲\選曲ステージ.cs" />
     <Compile Include="入力\ドラム入力種別.cs" />
     <Compile Include="曲\BackNode.cs" />
