DTXmatixx.設定.DB 名前空間を、DTXmatixx.データベース 名前空間に改名。
設定以外のデータベースも出てきたので。

--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -167,12 +167,12 @@
     <Compile Include="曲\曲ツリー.cs" />
     <Compile Include="曲\難易度種別.cs" />
     <Compile Include="設定\AutoPlay種別.cs" />
-    <Compile Include="設定\DB\Song.cs" />
-    <Compile Include="設定\DB\SongDB.cs" />
-    <Compile Include="設定\DB\SQLiteBaseDB.cs" />
-    <Compile Include="設定\DB\Record.cs" />
-    <Compile Include="設定\DB\User.cs" />
-    <Compile Include="設定\DB\UserDB.cs" />
+    <Compile Include="データベース\Song.cs" />
+    <Compile Include="データベース\SongDB.cs" />
+    <Compile Include="データベース\SQLiteBaseDB.cs" />
+    <Compile Include="データベース\Record.cs" />
+    <Compile Include="データベース\User.cs" />
+    <Compile Include="データベース\UserDB.cs" />
     <Compile Include="設定\ユーザ設定.cs" />
     <Compile Include="設定\システム設定.cs" />
     <Compile Include="設定\ドラムとチップと入力の対応表.cs" />
